src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>JS01__Referral_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Referral_Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sample Level field for use with Level feature. May be deleted or edited as needed.</description>
        <label>Level</label>
        <referenceTo>npsp__Level__c</referenceTo>
        <relationshipLabel>Households</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Previous_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sample Previous Level field for use with new Level feature. May be edited or deleted as needed.</description>
        <label>Previous Level</label>
        <referenceTo>npsp__Level__c</referenceTo>
        <relationshipLabel>Households (Previous Level)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npe01__FirstDonationDate__c</fullName>
        <description>Do not manually update. Updated by automatic processes. See excluded Record Types in Household Settings.</description>
        <label>DEPRECATED - First Donation Date</label>
        <summarizedField>Opportunity.CloseDate</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Amount</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>npe01__LastDonationDate__c</fullName>
        <description>Do not manually update. Updated by automatic processes. See excluded Record Types in Household Settings.</description>
        <label>DEPRECATED - Last Donation Date</label>
        <summarizedField>Opportunity.CloseDate</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Amount</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>npe01__LifetimeDonationHistory_Amount__c</fullName>
        <description>Do not manually update. Updated by automatic processes.</description>
        <label>DEPRECATED - Lifetime Donation Amount</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>npe01__LifetimeDonationHistory_Number__c</fullName>
        <description>Do not manually update. Updated by automatic processes.</description>
        <label>DEPRECATED - Lifetime Donation Number</label>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Amount</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>npe01__One2OneContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The primary contact for the Account, or the One2One contact for a One2One account.</description>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account</relationshipLabel>
        <relationshipName>Organizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npe01__SYSTEMIsIndividual__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hidden system field: do not change.  Updated by automatic processes.</description>
        <label>_SYSTEM: IsIndividual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe01__SYSTEM_AccountType__c</fullName>
        <description>Hidden system field: do not change.  Updated by automatic processes.</description>
        <inlineHelpText>System field: do not use or change.</inlineHelpText>
        <label>_SYSTEM: AccountType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__AverageAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>System field: do not change. Updated by automatic processes.</description>
        <label>Average Gift</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Best_Gift_Year_Total__c</fullName>
        <label>Best Gift Year Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__Best_Gift_Year__c</fullName>
        <label>Best Gift Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__FirstCloseDate__c</fullName>
        <description>Do not manually update. Updated by automatic processes. See excluded Record Types in Household Settings.</description>
        <label>First Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__Formal_Greeting__c</fullName>
        <inlineHelpText>For Household Accounts, uses fields of non-excluded, ordered related Contacts. Generated automatically.</inlineHelpText>
        <label>Formal Greeting</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>npo02__HouseholdPhone__c</fullName>
        <label>Household Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>npo02__Informal_Greeting__c</fullName>
        <inlineHelpText>For Household Accounts, uses fields of non-excluded, ordered related Contacts. Generated automatically.</inlineHelpText>
        <label>Informal Greeting</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>npo02__LargestAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not manually update. Updated by automatic processes. See excluded Record Types in Household Settings.</description>
        <label>Largest Gift</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__LastCloseDate__c</fullName>
        <description>Do not manually update. Updated by automatic processes. See excluded Record Types in Household Settings.</description>
        <label>Last Gift Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__LastMembershipAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not manually update. Updated by automatic processes. See Record Types in Household Settings.</description>
        <label>Last Membership Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__LastMembershipDate__c</fullName>
        <description>Do not manually update. Updated by automatic processes. See Record Types in Household Settings.</description>
        <label>Last Membership Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__LastMembershipLevel__c</fullName>
        <description>Do not manually update. Updated by automatic processes. See Record Types in Household Settings.</description>
        <label>Last Membership Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__LastMembershipOrigin__c</fullName>
        <description>Do not manually update. Updated by automatic processes. See Record Types in Household Settings.</description>
        <label>Last Membership Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__LastOppAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not manually update. Updated by automatic processes. See excluded Record Types in Household Settings.</description>
        <label>Last Gift Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__MembershipEndDate__c</fullName>
        <description>Do not manually update. Updated by automatic processes. See Record Types in Household Settings.</description>
        <label>Membership End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__MembershipJoinDate__c</fullName>
        <description>Do not manually update. Updated by automatic processes. See Record Types in Household Settings.</description>
        <label>Membership Join Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npo02__NumberOfClosedOpps__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not manually update. Updated by automatic processes. See excluded Record Types in Household Settings.</description>
        <label>Total Number of Gifts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__NumberOfMembershipOpps__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not manually update. Updated by automatic processes. See Record Types in Household Settings.</description>
        <label>Number of Memberships</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__OppAmount2YearsAgo__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not manually update. Updated by automatic processes. See excluded Record Types and FY/CY in Household Settings.</description>
        <label>Total Gifts Two Years Ago</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__OppAmountLastNDays__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not manually update. Updated by automatic processes. See excluded Record Types and FY/CY in Household Settings.</description>
        <label>Total Gifts Last N Days</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__OppAmountLastYear__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not manually update. Updated by automatic processes. See excluded Record Types and FY/CY in Household Settings.</description>
        <label>Total Gifts Last Year</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__OppAmountThisYear__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not manually update. Updated by automatic processes. See excluded Record Types and FY/CY in Household Settings.</description>
        <label>Total Gifts This Year</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__OppsClosed2YearsAgo__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not manually update. Updated by automatic processes. See excluded Record Types and FY/CY in Household Settings.</description>
        <label>Number of Gifts Two Years Ago</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__OppsClosedLastNDays__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not manually update. Updated by automatic processes. See excluded Record Types and FY/CY in Household Settings.</description>
        <label>Number of Gifts Last N Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__OppsClosedLastYear__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not manually update. Updated by automatic processes. See excluded Record Types and FY/CY in Household Settings.</description>
        <label>Number of Gifts Last Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__OppsClosedThisYear__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not manually update. Updated by automatic processes. See excluded Record Types and FY/CY in Household Settings.</description>
        <label>Number of Gifts This Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npo02__SYSTEM_CUSTOM_NAMING__c</fullName>
        <inlineHelpText>For Household Accounts, specifies which name related fields should not be automatically populated by the Householding code.</inlineHelpText>
        <label>_SYSTEM: CUSTOM NAMING</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Name</fullName>
                </value>
                <value>
                    <fullName>Formal_Greeting__c</fullName>
                </value>
                <value>
                    <fullName>Informal_Greeting__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npo02__SmallestAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not manually update. Updated by automatic processes. See excluded Record Types in Household Settings.</description>
        <label>Smallest Gift</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__TotalMembershipOppAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not manually update. Updated by automatic processes. See Record Types in Household Settings.</description>
        <label>Total Membership Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npo02__TotalOppAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Do not manually update. Updated by automatic processes. See excluded Record Types in Household Settings.</description>
        <label>Total Gifts</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The batch this Account was created in.</inlineHelpText>
        <label>Batch</label>
        <referenceTo>npsp__Batch__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Funding_Focus__c</fullName>
        <description>The general program area(s) that this organization funds.</description>
        <inlineHelpText>The general program area(s) that this organization funds.</inlineHelpText>
        <label>Funding Focus</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Animal Welfare</fullName>
                </value>
                <value>
                    <fullName>Arts and Culture</fullName>
                </value>
                <value>
                    <fullName>Capacity Building</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>Health Services</fullName>
                </value>
                <value>
                    <fullName>Human Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Grantmaker__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this organization is a grant making organization. Can apply to foundations, government agencies, corporations, etc.</description>
        <inlineHelpText>Indicates that this organization is a grant making organization. Can apply to foundations, government agencies, corporations, etc.</inlineHelpText>
        <label>Grantmaker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Matching_Gift_Administrator_Name__c</fullName>
        <description>The name of the company&apos;s matching gift administrator.</description>
        <inlineHelpText>The name of the company&apos;s matching gift administrator.</inlineHelpText>
        <label>Matching Gift Administrator Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Matching_Gift_Amount_Max__c</fullName>
        <description>The maximum amount the company will match on any single gift.</description>
        <inlineHelpText>The maximum amount the company will match on any single gift.</inlineHelpText>
        <label>Matching Gift Amount Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Matching_Gift_Amount_Min__c</fullName>
        <description>The smallest gift the company will match.</description>
        <inlineHelpText>The smallest gift the company will match.</inlineHelpText>
        <label>Matching Gift Amount Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Matching_Gift_Annual_Employee_Max__c</fullName>
        <description>The maximum amount the company will match each year for an employee.</description>
        <inlineHelpText>The maximum amount the company will match each year for an employee.</inlineHelpText>
        <label>Matching Gift Annual Employee Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Matching_Gift_Comments__c</fullName>
        <description>Additional notes about the company&apos;s matching gift program.</description>
        <inlineHelpText>Additional notes about the company&apos;s matching gift program.</inlineHelpText>
        <label>Matching Gift Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>npsp__Matching_Gift_Company__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this a company that offers matching gifts?</description>
        <inlineHelpText>Is this a company that offers matching gifts?</inlineHelpText>
        <label>Matching Gift Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Matching_Gift_Email__c</fullName>
        <description>Email of the company&apos;s matching gift administrator.</description>
        <inlineHelpText>Email of the company&apos;s matching gift administrator.</inlineHelpText>
        <label>Matching Gift Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>npsp__Matching_Gift_Info_Updated__c</fullName>
        <description>The date when the matching gift information was last updated.</description>
        <inlineHelpText>The date when the matching gift information was last updated.</inlineHelpText>
        <label>Matching Gift Info Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Matching_Gift_Percent__c</fullName>
        <description>The portion of a gift the company will match.</description>
        <inlineHelpText>The portion of a gift the company will match.</inlineHelpText>
        <label>Matching Gift Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>npsp__Matching_Gift_Phone__c</fullName>
        <description>Phone for the matching gift administration office.</description>
        <inlineHelpText>Phone for the matching gift administration office.</inlineHelpText>
        <label>Matching Gift Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>npsp__Matching_Gift_Request_Deadline__c</fullName>
        <description>Any restrictions on how old gifts can be to be eligible for matching.</description>
        <inlineHelpText>Any restrictions on how old gifts can be to be eligible for matching.</inlineHelpText>
        <label>Matching Gift Request Deadline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Membership_Span__c</fullName>
        <description>Formula: The number of years for which this Household has had a Member.</description>
        <formula>year(npo02__MembershipEndDate__c ) - year(npo02__MembershipJoinDate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: The number of years for which this Household has had a Member.</inlineHelpText>
        <label>Membership Span</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>npsp__Membership_Status__c</fullName>
        <description>Grace period defaults to 30 days. This can be adjusted in the Households Settings tab.</description>
        <formula>if ( npo02__MembershipEndDate__c  &lt;today(), if (npo02__MembershipEndDate__c  &gt; ( TODAY() -
IF(NOT(ISNULL($Setup.npo02__Households_Settings__c.npo02__Membership_Grace_Period__c)), $Setup.npo02__Households_Settings__c.npo02__Membership_Grace_Period__c, 30)) , &quot;Grace Period&quot; , &quot;Expired&quot;) , if(isnull(npo02__MembershipEndDate__c ),&quot;&quot;,&quot;Current&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula: Current, expired, or grace period.  Default grace period set in Household Settings.</inlineHelpText>
        <label>Membership Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Number_of_Household_Members__c</fullName>
        <inlineHelpText>for Household Accounts, the number of Contacts in the Household.</inlineHelpText>
        <label>Number of Household Members</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>Household_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>npo02__Formal_Greeting__c</columns>
        <columns>npo02__Informal_Greeting__c</columns>
        <columns>npo02__TotalOppAmount__c</columns>
        <columns>npo02__AverageAmount__c</columns>
        <columns>npo02__Best_Gift_Year__c</columns>
        <columns>npo02__HouseholdPhone__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.HH_Account</value>
        </filters>
        <label>Household Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyOrganizations</fullName>
        <filterScope>Mine</filterScope>
        <label>My Organizations</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Organization_Accounts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Organization</value>
        </filters>
        <label>Organization Accounts</label>
    </listViews>
    <listViews>
        <fullName>npsp__AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>npo02__TotalOppAmount__c</columns>
        <columns>npo02__OppAmountLastNDays__c</columns>
        <columns>npo02__AverageAmount__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <recordTypes>
        <fullName>HH_Account</fullName>
        <active>true</active>
        <description>An Account representing a Household containing one or more individuals</description>
        <label>Household Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Local_Provider</fullName>
        <active>true</active>
        <label>Local Provider</label>
    </recordTypes>
    <recordTypes>
        <fullName>Organization</fullName>
        <active>true</active>
        <description>An Account representing an organization</description>
        <label>Organization</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>